test/parser/should_succeed/unless3.souc
main() = do
    unless true do
        print "sub call"
        explode
    unless false 
        explode
    end unless
end main
