test/parser/should_fail/main3.souc
main() = do
	until true do
		print "sub call"
	end main
print "what about here?" 
